tests/baselines/reference/project/privacyCheckOnImportedModuleDeclarationsInsideNonExportedModule/amd/privacyCheckOnImportedModuleDeclarationsInsideNonExportedModule.errors.txt
test.ts(1,15): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
test.ts(4,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
test.ts(5,39): error TS1147: Import declarations in a namespace cannot reference a module.
test.ts(5,39): error TS2792: Cannot find module 'mExported'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
test.ts(24,35): error TS1147: Import declarations in a namespace cannot reference a module.
test.ts(24,35): error TS2792: Cannot find module 'mNonExported'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?


==== test.ts (6 errors) ====
    export module m1 {
                  ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    }
    
    module m2 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export import mExported = require("mExported");
                                          ~~~~~~~~~~~
!!! error TS1147: Import declarations in a namespace cannot reference a module.
                                          ~~~~~~~~~~~
!!! error TS2792: Cannot find module 'mExported'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
        export var c1 = new mExported.me.class1;
        export function f1() {
            return new mExported.me.class1();
        }
        export var x1 = mExported.me.x;
    
        export class class1 extends mExported.me.class1 {
        }
    
        var c2 = new mExported.me.class1;
        function f2() {
            return new mExported.me.class1();
        }
        var x2 = mExported.me.x;
    
        class class2 extends mExported.me.class1 {
        }
    
        import mNonExported = require("mNonExported");
                                      ~~~~~~~~~~~~~~
!!! error TS1147: Import declarations in a namespace cannot reference a module.
                                      ~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module 'mNonExported'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
        export var c3 = new mNonExported.mne.class1;
        export function f3() {
            return new mNonExported.mne.class1();
        }
        export var x3 = mNonExported.mne.x;
    
        export class class3 extends mNonExported.mne.class1 {
        }
    
        var c4 = new mNonExported.mne.class1;
        function f4() {
            return new mNonExported.mne.class1();
        }
        var x4 = mNonExported.mne.x;
    
        class class4 extends mNonExported.mne.class1 {
        }
    }